After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659967 - bridge: drive-by list usage fixes
bridge: drive-by list usage fixes
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-atk
unspecified
Other All
: Normal normal
: ---
Assigned To: Li Yuan
Depends on:
Blocks:
 
 
Reported: 2011-09-23 20:40 UTC by Ray Strode [halfline]
Modified: 2012-01-23 16:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bridge: drive-by list usage fixes (2.35 KB, patch)
2011-09-23 20:40 UTC, Ray Strode [halfline]
none Details | Review

Description Ray Strode [halfline] 2011-09-23 20:40:04 UTC
Just some drive by fixes Matthias and I noticed when
debugging a separate gtk crasher bug.
Comment 1 Ray Strode [halfline] 2011-09-23 20:40:06 UTC
Created attachment 197371 [details] [review]
bridge: drive-by list usage fixes

There are a few places where the glib list apis
aren't being used right:

1) There is code that use GList functions on GSLists
2) There is code that uses the list node itself instead
   of the node data
3) There is code that removes nodes from a list as its iterating
   over that list.
Comment 2 Mike Gorse 2011-09-23 21:57:05 UTC
Thanks; these look good (not sure if they should break the freeze or not; it's okay with me either way).
Comment 3 Mike Gorse 2012-01-21 11:08:12 UTC
I've just merged this patch: 247aaa.
Comment 4 Ray Strode [halfline] 2012-01-23 16:19:41 UTC
oh thanks. this dropped of my radar.