bridge: drive-by list usage fixes

There are a few places where the glib list apis
aren't being used right:

1) There is code that use GList functions on GSLists
2) There is code that uses the list node itself instead
   of the node data
3) There is code that removes nodes from a list as its iterating
   over that list.

https://bugzilla.gnome.org/show_bug.cgi?id=659967